2008-03-12 Jesse Kornblum <md5deep@jessekornblum.com>

	* Moved prototypes for process_normal and process_win32
	  to include/common.h to avoid compiler warnings and
	  repitions. 

	* Cleaned up audit code slightly

	* Fixed display banner to treat current working directory
	  as a Unicode string.

	* Enabled and allowed the user load known files that have
	  different kinds of hashes in them.

	* Version bump to 3.0. I've made so many changes to the
	  common code that it warrants the jump.

	
2008-03-11 Jesse Kornblum <md5deep@jessekornblum.com>
	
	* Added strsep (and appropriate autoconf/automake checks)
	  in place to ugly homebrew code to separate out string 
	  values. This is for one instance in match.c, need to update
	  the others.

	* While reading files on known hashes, convert filenames
	  to Unicode before storing.

	* Changed NEWLINE on Win32 to be just "\n" instead of "\r\n"
	  There was a problem using files of known hashes and reading
	  the file header.

	* Fixed parameters to and error checking from call to 
	  MultiByteToWideChar in match.c. Not only we were passing in
	  the wrong values, but we were always error'ing out.

	* Starting to update man page, TODO

	* Moved piecewise parsing code from md5deep/main.c to 
	  common/helpers.c. Enabled piecewise mode in hashdeep.
	  Also moved definition of _state to include/common.h.

	* Added comments to configure.ac and Makefile.am

	* Made usage message dynamic to display available algorithms


2008-03-10 Jesse Kornblum <md5deep@jessekornblum.com>

	* Separated the functions to display positive and negative
	  match results. Cleaned up the function names for this too.
	  Also updated audit mode so that it appears to work.

	* Documented -M and -X mode in usage message.

	* Updated file_* types used in include/common.h to avoid
	  the conflict with file_unknown. Moved filetype_t to
	  include/common.h as well. 

	* Starting to write code to load files of known hashes 
