@@ -31,10 +31,10 @@ install-exec-hook: update-manpages
 	rm -f ${man1dir}/${ALL_GOALS}deep.1
 
 update-manpages: md5deep.1
-	cp $< sha1deep.1
-	cp $< sha256deep.1
-	cp $< tigerdeep.1
-	cp $< whirlpooldeep.1
+	cp md5deep.1 sha1deep.1
+	cp md5deep.1 sha256deep.1
+	cp md5deep.1 tigerdeep.1
+	cp md5deep.1 whirlpooldeep.1
 
 man_MANS=md5deep.1 sha1deep.1 sha256deep.1 tigerdeep.1 whirlpooldeep.1
 
